--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
+greenlet==3.2.3
 gunicorn==23.0.0
 h11==0.16.0
 idna==3.10
@@ -12,6 +13,7 @@ packaging==25.0
 pydantic==2.11.6
 pydantic_core==2.33.2
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
